...
        onClose={() => setReportVisible(false)}
        targetId={message.id}
        targetType="MESSAGE"
      />

      <View
        testID="message-bubble"
        className={`flex-row mb-4 ${isMe ? 'justify-end' : 'justify-start'}`}
      >
        {!isMe && (
          <View className="mr-2 justify-end">
            <Avatar
              uri={message.sender?.profile_picture}
...
