...
    return <ConversationListItem conversation={item} />;
  };

  return (
    <ScreenContainer className="pt-5">
      <TopActionBar
        title="Beskeder"
        showNotifications={false}
        showCalendar={false}
        showSettings={false}
      />

      {/* Search Bar */}
...
